assets/css/global.css
/* ... */
.btn {
  text-indent: 37px;
  display: block;
}
.clearfix {
  overflow: hidden;
}
.listview {
  margin: 7px 14px 7px 0;
  padding: 8px 12px;
  background: #f7f7f7;
  /*width: 550px;*/
  border-bottom: 1px solid #eee;
}
.listview a {
  display: inline-block;
}
.listview ul {
  margin: 15px 10px;
}
.listview li {
  padding: 4px 0;
}
#client-logo {
  float: right;
  margin-right: 25px;
  padding-right: 4px;
}
.details-ret {
  float: right;
  margin: 0 23px 0 0;
  padding: 10px 4px 10px;
  background: #eee;
}
.details-ret a {
  margin: 0 4px 0;
}
.details-ret a.active_link {
  border-bottom: 2px solid #F17022;
}
@media screen and (max-width: 768px) {
	.details-ret-first {
	  display: none;
	}
}
.client-meta {
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  background: #eee;
  padding: 7px 6px;
}
.client-meta p {
  clear: both;
}
.client-meta a {
  display: block;
}
.author {
  text-align: right;
  font-size: 150%;
}
.see-more {
  font-size: 90%;
}
.go {
  padding: 12px 0 0;
  float: right;
}
#all {
  clear: both;
}
@media screen and (min-width: 768px) {
	#tab3 #all {
		padding: 0;
		margin: 0;
	}
}
#main {
  /*margin: 0 34px 0 0;*/
  padding: 0 2em 24px 2px;
  /*width: 715px;*/
  float: left;
  clear: both;
}
#main-2 {
  /*margin: 0 34px 0 0;*/
  padding: 0 2em 24px 2px;
  /*width: 627px;*/
  float: left;
  clear: both;
}
#title {
  clear: both;
  padding: 0 0 15px;
}
#sidebar, #sidebar-2 {
  float: left;
  /*margin-left: 12px;*/
  padding: 3px 3px 0;
  /*width: 315px;*/
}
#sidebar-2 {
  /*width: 355px;*/
}
#map {
  width: 230px;
  height: 230px;
}
.submodule {
  padding-bottom: 6px;
  background: #f8f8f8;
	line-height: 1.6em;
  /*font-family: arial, helvetica, sans-serif;*/
}
.submodule-icon {
	float: left;
	width: 30px;
	text-align: center;
}
.theme3 .submodule {
  background: none;
}
.submodule h3.headline {
	text-transform: lowercase;
	font-size: 110%;
}
.submodule h4 {
  border-top: 0;
  border-bottom: 1px solid #fff;
  padding: 3px 10px;
  background: #eee;
  color: #888;
  clear: both;
  /*letter-spacing: .05em;*/
}
.theme3 .submodule h4 {
  background: #F17022;
  color: #fff;
  float: left;
}
.submodule h4 a {
  float: right;
  font-size: 9px;
  margin-top: 1px;
  padding-top: 0;
  text-decoration: none;
  border-bottom: 0;
  /*letter-spacing: normal;*/
}
.submodule h4 a:hover {
  text-decoration: underline;
}
.submodule h5 {
  margin-top: 7px;
}
.subcontent {
  padding: 8px;
  /*padding: 2px;*/
  clear: both;
}
.subcontent ul li {
  padding: 3px 0;
  clear: both;
}
.subcontent ul {
  margin: 3px 3px 0 6px;
}
.subcontent span {
  font-weight: bold;
  color: #777;
}
.subcontent img {
	max-width: 225px;
}
#project-list {
  float: left;
  width: 100%;
}
#project-list-nav a, #client-list-nav a {
  /*font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;*/
  font-size: 96%;
}
#client-list-nav {
	line-height: 1.7em;
}
#project-images {

}
.project-image {
  display: inline-block;
  margin: 0 20px 20px 0;
}
.project-row {
  clear: both;
  border: 1px solid #fff;
  border-top: 1px solid #eee;
  margin: 0 0 7px;
  padding: 14px 0 2px;
}
.project-row:hover {
  border: 1px solid #ccc;
  background: #eee;
}
.project-highlight {
  border: 1px solid #ccc;
  background: #ff9900;
}
.theme3 .project-row {
  border: 1px solid #fff;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
}
.theme3 .project-row:hover {
  border: 1px solid #fff;
  background: #eee;
}
.project-col {
  float: left;
  padding: 0 20px;
  position: relative;
}
.project-col img {
  border: 1px solid #ccc;
  padding: 2px;
  margin: 2px 2px 5px;
}
.project-col img:hover {
  border: 1px solid #fff;
}
.project-col .marker {
  position: absolute;
  top: -3px;
  left: 8px;
}
.project-col p {
  font-size: 105%;
}
.submodule p {
  font-size: 95%;
  padding-bottom: 0;
  margin-bottom: 0;
}
.project-col span {
  font-weight: bold;
  font-family: helvetica, arial, sans-serif;
}
.project-col h3 {
  font-size: 1.3em;
}
.project-col h3 a {
  border-bottom: none;
}
.project-col-dtl {
  /*min-width: 475px;*/
  padding: 0 20px;
}
.footnote {
  color: #ccc;
  font-size: 80%;
  text-align: right;
}
#pager-summary {
  padding: 0 0 4px;
  text-align: right;
}
@media screen and (max-width: 768px) {
	#pager-summary {
	  padding: 4px 4px 4px 0;
	  text-align: left;
	}
}
#pager-summary span {
  font-weight: bold;
}
#pager {
  clear: both;
  padding: 10px 4px;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
  width: 100%;
}
#pager-nav {
  float: left;
  /*width: 495px;*/
  padding: 4px 0;
}
#pager a {
  border: 1px solid #ccc;
  background: #eee;
  padding: 4px 7px;
  text-decoration: none;
}
#pager a:hover {
  text-decoration: underline;
}
#pager a.current {
  border: none;
  background: none;
}
#pager a.current:hover {
  text-decoration: none;
}
#pager-ctrl {
  text-align: right;
  float: right;
  padding: 4px 0;
}
.project-related {
  margin: 0 0 7px;
  padding-bottom: 4px;
  /*text-align: center;*/
}
#project-views {
  padding: 9px 20px;
  margin: 6px 0;
  background: #eee;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
}
#project-views a {
  width: 75px;
  padding: 3px;
  display: block;
  border: 2px solid #ccc;
  margin-right: 10px
}
#project-views .activeSlide a {
  border: 2px solid #F17022;
}
#project-views a:focus {
  outline: none;
}
#project-views img {
  border: none;
  display: block;
}
#project-thumbs li {
  float: left;
  margin: 2px 0 3px;
}
#project-details {
  padding: 20px 20px 0 0;
}
#project-details p {
  font-size: 1.18em;
	padding-bottom: 0;
}
.project-details-ret {
  margin-top: 37px;
  padding: 10px 8px 10px;
  background: #eee;
  float: left;
}
@media screen and (max-width: 768px) {
	#project-details {
	  padding: 10px 0 0 0;
	}
	.project-details-ret {
		display: none;
	}
}
.link-prompt {
  background: #eee;
  padding: 5px 16px 5px;
  text-align: right;
  clear: both;
  margin: 15px 20px 10px 0;
  float: right;
}
/* ... */

